<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:id="@+id/mainbuttons" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:drawableLeft="@drawable/network_service"
        android:text="@string/mstart_service"
        android:layout_margin="15dp" 
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/mstop_service"
        android:drawableStart="@drawable/earth_stop"
        android:layout_margin="15dp"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableStart="@drawable/advancedsettings"
        android:text="@string/msetup"
        android:layout_margin="15dp"
        style="?android:attr/borderlessButtonStyle" />

</LinearLayout>